app/assets/stylesheets/pages.scss
// Place all the styles related to the Pages controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

@import 'defaults';

.page {
  .tab-bar {
    position: relative;
    width: 100%;
    height: 1.8em;
    .tab {
      position: absolute;
      width: 50%;
      border: 0.125em solid transparent;
      border-bottom: $tab-border;
      padding: 4px 8px;
      box-sizing: border-box;
      // cursor: pointer;
    }
    .tab.active {
      border: $tab-border;
      border-bottom: 0.125em solid white;
      border-top-left-radius: 0.25em;
      border-top-right-radius: 0.25em;
    }
    .tab.page-mobile-tab {
      left: 50%;
      // cursor: default;
    }
  }

  .item-lists {
    position: relative;
    width: 100%;

    .page-items-list, .page-mobile-view {
      display: none;
    }

    .active {
      display: block;
    }

    .page-items-list {
      padding: 0.5em;
      hr:last-child {
        display: none;
      }
      .sliced-page {
        overflow: hidden;
        margin: 0 auto;
        table-layout: fixed;
        width: 100%;
      }
      .columns-1 {
        width: 16em;
      }
      .columns-2 {
        width: 26em;
      }
      .columns-3 {
        width: 30em;
      }
      .columns-4 {
        width: 40em;
      }
      .columns-x {
        width: 48em;
      }
      .row {
        display: table-row;
      }
      .cell {
        width: 100%;
        height: 100%;
      }
      .card-wrapper {
        position: relative;
        height: 100%;
        padding: 7.5% 5% 2.5%;
        &:hover {
          .remove, .edit {
            display: block;
          }
        }
      }
      .card.over {
        border: 0.125em dashed black;
      }
      .card {
        position: relative;
        width: 100%;
        padding-top: 133%;
        text-align: center;
        box-sizing: border-box;
        border: 0.125em solid $medium-sea-green;
        border-radius: 0.25em;
        .content {
          position: absolute;
          top: 0;
          right: 0;
          bottom: 0;
          left: 0;
          overflow: hidden;
          // TODO: font size
          .name {
            pointer-events: none;
            padding: 5% 0;
          }
          .link-to {
            position: absolute;
            top: 0.0625em;
            right: 0.125em;
          }
          .img-wrapper {
            pointer-events: none;
            padding-top: 5%;
            img {
              width: 90%;
            }
          }
        }
      }

      .edit, .remove {
        display: none;
        font-size: 1em;
        line-height: 1.2;
        position: absolute;
        top: 3.5%;
        cursor: pointer;
        color: $dark-orange;
        padding: 0 (3em/16);
        border: 0.125em solid $dark-orange;
        border-radius: 50%;
        background-color: white;
        &:hover {
          box-shadow: 0 0 0.25em;
        }
        .hover {
          display: none;
        }
        &:focus {
          outline: none;
        }
        &:hover .default {
          display: none;
        }
        &:hover .hover {
          display: inline-block;
        }
      }
      .edit {
        left: 2.5%;
      }
      .remove {
        right: 2.5%;
      }
      .add-button {
        font-size: 48px;
        color: inherit;
        width: 100%;
        height: 100%;
        background: none;
        border: none;
        &:hover {
          color: $medium-sea-green;
          cursor: pointer;
        }
        &:focus {
          outline: none;
        }
      }

    }
    .page-mobile-view { }
  }
}

.overlay{
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  overflow: auto;
  .search-item {
    width: 950px;
    margin: 2em auto;
    // height: 90%;
    background-color: white;
    overflow: auto;
    .add-item-title, .edit-item-title {
        font-size: 1.5em;
        font-style: italic;
        font-weight: 700;
        text-align: center;
        color: $medium-sea-green;
      }
    .close {
      background: none;
      float: right;
      cursor: pointer;
      color: $dark-orange;
      border: none;
      font-size: 1.75em;
      margin: 0.5em;
      .hover {
        display: none;
      }
      &:hover .default {
        display: none;
      }
      &:hover .hover {
        display: inline-block;
      }
    }
    .no-items-found {
      color: $dark-orange;
      text-align: center;
      font-style: italic;
    }
    .item-result, .edit-item {
      // overflow: auto;
      width: 35em;
      text-align: center;
      .item-result-img, .item-edit-img {
        display: inline-block;
        border: solid 2px gray;
        border-radius: 2px;
        width: 10em;
        height: 12em;
        vertical-align: middle;
        text-align: center;
        img {
          margin-top: 2em;
          width: 80%;
          vertical-align: middle;
        }
      }
      .fields {
        display: inline-block;
        text-align: left;
        vertical-align: middle;
      }
      .my-item {
        width: 21em;
        margin-bottom: 1em;
      }
      .button-box {
        float: none;
        margin: 0 auto;
      }
      .already {
        color: $medium-sea-green;
        font-style: italic;
      }
    }
  }
}

